# merit

./: .env  .env.backup  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PROJECT_OVERVIEW.md  README.md  install.sh  pyproject.toml  requirements.txt  setup.py  test_report_anthropic.md  test_report_bedrock.md
docs/: docs.json  index.mdx  installation.mdx
docs/apis/: index.mdx  metrics.mdx  tracing.mdx
docs/concepts/: case.mdx  merit.mdx  metric.mdx  semantic-predicates.mdx
docs/get-started/: merit-vs-evals.mdx  quick-start.mdx
docs/usage/: running-merits.mdx  writing-merits.mdx
examples/: __init__.py  basic_usage.py  merit_example_assertions.py  merit_example_cases.py  merit_example_concurrency.py  merit_example_metrics.py  merit_example_outcomes.py  merit_example_parametrize_and_tags.py  merit_example_predicates.py  simple_example.py  test_results_sample.json
examples/example_ai_project/: README.md  main.py  requirements.txt
merit_analyzer/: __init__.py  cli.py
merit_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
merit_analyzer/analysis/: __init__.py  claude_agent.py  comparative.py  root_cause.py  schema_discovery.py
merit_analyzer/core/: __init__.py  analyzer.py  config.py  pattern_detector.py  test_parser.py  universal_pattern_detector.py
merit_analyzer/discovery/: __init__.py  code_mapper.py  framework_detector.py  project_scanner.py
merit_analyzer/models/: __init__.py  pattern.py  recommendation.py  report.py  test_result.py
merit_analyzer/recommendations/: __init__.py  consolidator.py  executive_summary.py  formatter.py  generator.py  prioritizer.py
src/merit/: __init__.py  config.py
src/merit/analysis/: __init__.py
src/merit/assertions/: __init__.py  _base.py  base.py  basic.py  check_facts.py  transformers.py
src/merit/checkers/: __init__.py  base.py  client.py  condition_checkers.py  fact_checkers.py  style_checkers.py
src/merit/cli/: __init__.py
src/merit/context/: __init__.py  context.py
src/merit/core/: __init__.py  assert_transformer.py  module_loader.py
src/merit/llm/: __init__.py  base.py  client.py  config.py  defaults.py
src/merit/metrics/: __init__.py  _base.py  base.py  basic.py
src/merit/metrics_/: base.py
src/merit/predicates/: __init__.py  ai_predicates.py  base.py  client.py  condition_predicates.py  fact_predicates.py  style_predicates.py
src/merit/reports/: __init__.py  base.py  console.py
src/merit/resources/: resolver.py
src/merit/storage/: __init__.py  base.py
src/merit/testing/: __init__.py  case.py  context.py  discovery.py  loader.py  outcomes.py  parametrize.py  repeat.py  resources.py  runner.py  suite.py  sut.py  t.py
src/merit/tracing/: __init__.py  exporters.py  lifecycle.py
src/merit_analyzer/: __init__.py  cli.py
src/merit_analyzer/core/: __init__.py
src/merit_analyzer/engines/: __init__.py  code_analyzer.py  llm_client.py
src/merit_analyzer/interface/: __init__.py  cli.py
src/merit_analyzer/processors/: __init__.py  clustering.py  html_formatter.py  markdown_formatter.py  parse_test_cases.py  report_formatter.py
src/merit_analyzer/types/: __init__.py  assertion.py  case.py  error.py  testcase.py
tests/: __init__.py  test_core.py  test_models.py
tests/integration/: test_anthropic_handler.py  test_code_analyzer_integration.py
tests/integrations/: test_ai_predicates.py  test_llm_handler_agents.py  test_llm_handler_providers.py  test_llm_handler_workflows.py  test_local_embeddings.py
tests/sample_data/: test_data.csv
tests/unit/: test_assert_rewrite.py  test_ast_assert_rewrite.py  test_cases.py  test_checker.py  test_cli.py  test_clustering.py  test_code_analyzer.py  test_config.py  test_context.py  test_get_llm_client.py  test_iter_cases.py  test_markdown_formatter.py  test_metrics.py  test_outcomes.py  test_parametrize.py  test_predicate.py  test_repeat.py  test_resources.py  test_runner.py  test_sqlite_store.py  test_sut.py  test_tags.py  test_testcase_types.py  test_tracing.py
(+48 files in other folders)
