[project]
name = "merit-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mark Reith", email = "mark@appmerit.com" },
    { name = "Nikita Shirobokov", email = "nick@appmerit.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "hdbscan>=0.8.38",
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.0",
    "click>=8.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[project.scripts]
merit = "merit_analyzer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
